# recombox_metadata_provider

./: Cargo.toml  README.md
src/: global_types.rs  lib.rs  test.rs
src/featured_content/: anime.rs  mod.rs  movie.rs  movies.rs  tv.rs
src/search_content/: anime.rs  mod.rs  movies.rs  tv.rs
src/trending_content/: anime.rs  mod.rs  movie.rs  movies.rs  tv.rs
src/view_content/: anime.rs  mod.rs  movies.rs  tv.rs
src/view_content_info/: anime.rs  mod.rs  tv.rs
