[package]
name = "recombox_metadata_provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
fake_user_agent = "0.2.3"
html-escape = "0.2.13"
indexmap = {version="2.13.1", features = ["serde"]}
json5 = "1.3.1"
regex = "1.12.3"
reqwest = {version = "0.12.28", default-features = false, features = ["rustls-tls", "json", "multipart", "gzip", "brotli", "deflate"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = {version = "1.51.0", features = ["full"]}
url = "2.5.8"
urlencoding = "2.1.3"
visdom = {version = "1.0.4", features = ["full"]}

[profile.release]
opt-level = 3 
lto = true 
strip = true
codegen-units = 1
